# ITDO_ERP2

./: .claudeignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  20250711_result02.txt  AGENT_ACTIVITY_ANALYSIS_20250118_1845.md  AGENT_ACTIVITY_ASSESSMENT_20250118_1915.md  AGENT_ACTIVITY_REPORT_20250118_1745.md  AGENT_DIAGNOSTIC_ISSUES.md  AGENT_EMERGENCY_RESET_20250719_1040.md  AGENT_MANDATORY_CHECKLIST.md  AGENT_STATUS.md  AGENT_STATUS_20250118_1700.md  AGENT_SYSTEM_STATUS_INVESTIGATION_20250719_1000.md  ALTERNATIVE_DEVELOPMENT_APPROACH.md  AUTOMATION_SYSTEM_GUIDE.md  CC01_ALT.md  CC01_DIRECT_ACTION.md  CC01_EXCELLENT_REPORT_RESPONSE_20250117.md  CC01_MINIMAL_RESTART.md  CC01_MISSION_COMPLETE.md  CC01_STATUS.txt  CC01_WORK_PATTERN_INVESTIGATION_20250118_2000.md  CC01_incremental_log_v29.txt  CC01_progress_v26.txt  CC02_CC03_BRANCH_SPECIFIC_INSTRUCTIONS.md  CC02_SUCCESS_REPORT.md  CC02_progress_v30.txt  CC03_CICD_ANALYSIS.md  CC03_INDEPENDENT_WORKFLOW.md  CC03_MINIMAL_RESTART.md  CC03_PROACTIVE_STANDALONE.md  CC03_PROTOCOL_COMPLETION_REPORT.md  CC03_V32_CONTINUOUS_IMPROVEMENT_REPORT.md  CC03_V58_COMPLETION_REPORT.md  CC03_V59_COMPLETION_SUMMARY.md  CC03_V61_COMMIT_LOG.md  CC03_V61_SIMPLE_DESIGN_PLAN.md  (+41 more)
backend/: .env.example  .gitignore  .gitkeep  .mypy-ignore.md  API_DOCUMENTATION_SUMMARY.md  BRANCH_CLEANUP_PLAN_2025-07-14.md  CC02_ADVANCED_DEVELOPMENT_PROGRESS_REPORT_20250117.yaml  CC02_BACKEND_STATUS.md  CC02_BACKEND_TEST_IMPROVEMENT.md  CC02_COMPLIANCE_REPORT_20250117.yaml  CC02_EMERGENCY_MERGE_CONFLICT_RESOLUTION_REPORT_20250117.yaml  CC02_FIX_STATUS.txt  CC02_LOG.txt  CC02_PHASE4_COMPLETE_COMPLIANCE_REPORT_20250117.yaml  CC02_PROGRESS_$(date +%Y%m%d_%H%M).md  CC02_SESSION_LOG.md  CC02_STATUS_VERIFICATION_20250117_1510.md  CC02_WORK_ASSIGNMENT_COMPLETION_REPORT_20250117.yaml  CC02_alive.txt  CC02_progress_v25.txt  CC03_CYCLE170_COMPLETE_REPORT.md  CC03_CYCLE172_COMPLETE_REPORT.md  CC03_CYCLE174_COMPLETE_REPORT.md  CC03_CYCLE175_COMPLETE_REPORT.md  CC03_CYCLE176_COMPLETE_REPORT.md  CC03_CYCLE178_COMPLETE_REPORT.md  CC03_CYCLE181_COMPLETE_REPORT.md  CC03_CYCLE184_COMPLETE_REPORT.md  CC03_CYCLE185_COMPLETE_REPORT.md  CC03_CYCLE188_COMPLETE_REPORT.md  CC03_CYCLE189_COMPLETE_REPORT.md  CC03_CYCLE190_COMPLETE_REPORT.md  CC03_CYCLE192_COMPLETE_REPORT.md  CC03_CYCLE193_COMPLETE_REPORT.md  CC03_CYCLE194_COMPLETE_REPORT.md  CC03_CYCLE195_COMPLETE_REPORT.md  CC03_CYCLE196_COMPLETE_REPORT.md  CC03_CYCLE199_COMPLETE_REPORT.md  CC03_CYCLE201_COMPLETE_REPORT.md  CC03_CYCLE202_COMPLETE_REPORT.md  (+108 more)
backend/.github/workflows/: ci-cd-enhanced.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_organization_tables.py  001_create_users_simple.py  001_initial_migration.py  001_performance_indexes.py  002_add_user_management_tables.py  002_create_organizations_simple.py  003_add_project_management_tables.py  003_complete_type_safe_schema.py  003_create_products_simple.py  003_update_org_dept_role_models.py  004_add_permission_models.py  004_add_project_management_tables.py  004_add_task_management_v2.py  004_complete_type_safe_schema.py  004_create_products_v20.py  005_add_task_management_tables.py  006_add_department_hierarchy_fields.py  (+11 more)
backend/app/: __init__.py  main.py  main_minimal.py  main_super_minimal.py  types.py
backend/docs/: ARCHITECTURE.md  DEPARTMENT_SERVICE_API.md  DEPARTMENT_SERVICE_IMPLEMENTATION_SUMMARY.md  api-specification.md  api_versioning_guide.md  dashboard-progress-specification.md  dashboard-progress-test-specification.md  dashboard-specification.md  day2-progress-report.md  keycloak-api-docs.md  keycloak-integration-spec.md  keycloak-test-spec.md  organization-management-spec.md  organization-test-spec.md  phase3b-review-summary.md  project-management-specification.md  project-management-test-specification.md  sprint-1-completion-report.md  sprint-2-planning.md  sprint1-completion-report.md  sprint2-preparation-plan.md  sprint2_day1_summary.md  sprint2_day2_summary.md  sprint3_completion_summary.md  task-management-specification.md  task-management-test-specification.md  task-management-v2-api-reference.md  task-management-v2-implementation-guide.md  task-management-v2-implementation-summary.md  task-management-v2-specification.md  task-management-v2-tdd-red-summary.md  task-management-v2-test-specification.md  test-guidelines.md  user-management-specification.md  user-management-test-specification.md
backend/infra/: CC03-INFRASTRUCTURE-MANIFEST.md
backend/scripts/: advanced_test_automation.py  ai_code_optimization.py  cc02_v39_continuous_pr_processor.py  continuous_backend_improvement.py  continuous_improvement_loop.py  continuous_quality_monitor.py  create_admin.py  database_optimizer.py  generate_api_docs.py  infinite_optimization_loop.py  init_test_data.py  performance_optimizer.py  realtime_performance_monitor.py  run_erp_business_tests.py  setup_test_data.py  smart_deployment_system.py  test_automation_ci_cd.py  typecheck.sh
backend/test-reports/: environment-verification-20250705-170047.txt  environment-verification-20250705-170148.txt  environment-verification-20250705-170532.txt  environment-verification-20250705-203917.txt  environment-verification-20250708-023119.txt
backend/tests/: __init__.py  base.py  conftest.py  conftest.py.backup  conftest_backup.py  conftest_improved.py  factories.py  test_advanced_product_management.py  test_api_integration.py  test_api_versioning.py  test_comprehensive_security_audit.py  test_department_collaboration.py  test_department_hierarchy.py  test_department_permission_inheritance.py  test_department_task_integration.py  test_department_workflow.py  test_feature_flags.py  test_financial_integration.py  test_health_check.py  test_health_checks.py  test_inventory_integration.py  test_inventory_management_core.py  test_keycloak_setup.py  test_main.py  test_notification_system.py  test_organization_settings.py  test_pm_automation.py  test_product_catalog_features.py  test_product_image_management.py  test_product_management_api.py  test_simple_auth.py
(+2853 files in other folders)
